Initial server socket implementation
Also add note and IP field to GUI