@@ -15,6 +15,14 @@ dependencies {
 	implementation 'org.hsqldb:hsqldb:2.6.0'
 }
 
+java {
+	sourceCompatibility JavaVersion.VERSION_16
+}
+
+compileJava {
+	options.compilerArgs.add('--enable-preview')
+}
+
 application {
 	mainModule.set('ritzow.notes.server')
 	mainClass.set('ritzow.notes.server.RunServer')
@@ -24,4 +32,6 @@ run {
 	doLast {
 		workingDir project.file('server')
 	}
+
+	jvmArgs.add('--enable-preview')
 }
